--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.0",
